--- a/src/components/aq-homepage.html
+++ b/src/components/aq-homepage.html
@@ -328,7 +328,7 @@
         },
   		
     		onJoin: function() {
-    			 this.fire('rt-changed',{route:'/user/signin'});;
+    			 this.fire('rt-changed',{route:'/user/signup'});;
     		},
 
     		onFeatures: function() {
