--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -848,14 +848,15 @@
 
                     basicSettings.push({label:"Initial Cash", value:allSettings["initialCash"], value2:""});
 
-                    var dates = new Date(allSettings["startDate"]).toLocaleDateString('en-US')+"  to  "+ new Date(allSettings["endDate"]).toLocaleDateString('en-IN');
+                    var dates = new Date(allSettings["startDate"]).toLocaleDateString('en-IN')+"  to  "+ new Date(allSettings["endDate"]).toLocaleDateString('en-IN');
 
                     basicSettings.push({label:"Dates", value:dates, value2:""});
 
-                    basicSettings.push({label:"Benchmark", value:"", value2:"NIFTY_50"});
+                    basicSettings.push({label:"Benchmark", value:"", value2:allSettings.benchmark ? allSettings.benchmark=="" ? "NIFTY_50" : allSettings.benchmark : "NIFTY_50"});
 
-                    basicSettings.push({label:"Universe", value:"", value2:allSettings.universe=="" ? "Nifty 50" : allSettings.universe});
-                    
+                    basicSettings.push({label:"Universe", value:"", 
+                            value2:allSettings.universe ? allSettings.settings=="" ? "Nifty 50" : allSettings.universe : "Nifty 50"});
+
                     if(advancedSettings.slippage) {
                         brokerageSettings.push({label:"Slippage", value:advancedSettings.slippage.value, value2:advancedSettings.slippage.model});
                     }
