--- a/src/components/common/aq-group-selector.html
+++ b/src/components/common/aq-group-selector.html
@@ -7,6 +7,7 @@
             border: 1px solid teal;
             background-color: teal;
             color: white;
+            font-weight: bolder;
         }
         
         paper-button {
