--- a/src/components/common/aq-settings-comparison-item.html
+++ b/src/components/common/aq-settings-comparison-item.html
@@ -48,7 +48,7 @@
                         </paper-tab>
                     </template>
                 </paper-tabs>
-		    	<aq-settings-display settings="[[settingsRight]]"></aq-settings-display>
+		    	<aq-settings-display settings="[[settingsRight]]" ></aq-settings-display>
 	    	</div>
 	    </div>
 
@@ -77,7 +77,8 @@
 				selectedLeft: {
 					type:Number,
 					value:0,
-				}
+				},
+				
 			},
 
 			_compareItemsChanged: function() {
@@ -93,10 +94,21 @@
 
                 this.backtestIndexArray = this.compareItems.map(x=>"Backtest " +x.index);
 
-                this.settingsLeft = this.computeSettings(backtests[this.selectedLeft].settings);
+                var settingsLeft = this.computeSettings(backtests[this.selectedLeft].settings);
 
-                this.settingsRight = this.computeSettings(backtests[this.selectedRight].settings);
+                var settingsRight = this.computeSettings(backtests[this.selectedRight].settings);
+           		
+           		if(settingsLeft.length == settingsRight.length) {
+	           		var differenceArray = this.computeDifference(settingsLeft, settingsRight);
 
+	           		for(var i=0;i<differenceArray.length;i++) {
+	           			settingsLeft[i].diff = differenceArray[i];
+	           			settingsRight[i].diff = differenceArray[i];
+	           		}
+           		}
+
+           		this.settingsLeft = settingsLeft;
+           		this.settingsRight = settingsRight;
             },
 
             computeSettings: function(allSettings) {
@@ -107,13 +119,19 @@
 
                 var advancedSettings = JSON.parse(allSettings.advanced);
 
-                basicSettings.push({label:"Initial Cash", value:allSettings["initialCash"], value2:""});
+                basicSettings.push({label:"Initial Cash", value: date.formatMoneyValue(allSettings["initialCash"].toFixed(0)), value2:""});
 
                 //var dates = new Date(allSettings["startDate"]).toLocaleDateString('en-US', {year: 'numeric', month: 'long', day: 'numeric' })+" to "+ new Date(allSettings["endDate"]).toLocaleDateString('en-IN', {year: 'numeric', month: 'long', day: 'numeric'});
 
-                var dates = new Date(allSettings["startDate"]).toLocaleDateString('en-IN')+"  to  "+ new Date(allSettings["endDate"]).toLocaleDateString('en-IN');
+                //var dates = new Date(allSettings["startDate"]).toLocaleDateString('en-IN')+"  to  "+ new Date(allSettings["endDate"]).toLocaleDateString('en-IN');
 
-                basicSettings.push({label:"Dates", value:dates, value2:""});
+                var startDate =  new Date(allSettings["startDate"]).toLocaleDateString('en-IN',{year: 'numeric', month: 'long', day: 'numeric' });
+
+                var endDate = new Date(allSettings["endDate"]).toLocaleDateString('en-IN', {year: 'numeric', month: 'long', day: 'numeric' });
+                
+                basicSettings.push({label:"Start Date", value:"", value2:startDate});
+
+                basicSettings.push({label:"End Date", value:"", value2:endDate});
 
                 basicSettings.push({label:"Benchmark", value:"", value2:allSettings.benchmark ? allSettings.benchmark=="" ? "NIFTY_50" : allSettings.benchmark : "NIFTY_50"});
 
@@ -121,11 +139,11 @@
                             value2:allSettings.universe ? allSettings.settings=="" ? "Nifty 50" : allSettings.universe : "Nifty 50"});
 
                 if(advancedSettings.commission) {
-                    brokerageSettings.push({label:"Commission", value:advancedSettings.commission.value.toString(), value2:advancedSettings.commission.model});
+                    brokerageSettings.push({label:"Commission", value:advancedSettings.commission.value.toString()+'%', value2:advancedSettings.commission.model});
                 }
 
                 if(advancedSettings.slippage) {
-                    brokerageSettings.push({label:"Slippage", value:advancedSettings.slippage.value.toString(), value2:advancedSettings.slippage.model});
+                    brokerageSettings.push({label:"Slippage", value:advancedSettings.slippage.value.toString() +'%', value2:advancedSettings.slippage.model});
                 }
 
                 if(advancedSettings.cancelPolicy) {
@@ -153,6 +171,26 @@
                 if(settings.length > 0){
                     return settings;
                 }
+            },
+
+            computeDifference: function(arr1, arr2) {
+
+            	var nSettings = arr1.length;
+
+            	var diff=[];
+            	for(var i=0;i<nSettings;i++){
+            		var l1 = arr1[i].label;
+            		var v11 = arr1[i].value;
+            		var v12 = arr1[i].value2;
+
+            		var l2 = arr2[i].label;
+            		var v21 = arr2[i].value;
+            		var v22 = arr2[i].value2;
+            	
+            		diff.push(l1 == l2 && (v11 != v21 || v12 != v22) ? 1 : 0); 
+            	}
+
+            	return diff;
             },
 
 		});
