--- a/src/components/common/aq-settings-display.html
+++ b/src/components/common/aq-settings-display.html
@@ -6,31 +6,46 @@
 
 	<style>
 		.item-label {
-			font-size: 12px;
-			width: 100px;
+			font-size: 13px;
+			width: 120px;
 		}
 
-		.item-value {
+		.item-value2 {
+			/*background-color: #f2f2f2;*/
+			color:teal;
+			--color: white;
 			--background-color: teal;
 			background-color: #f2f2f2;
 			--color: white;
 			font-size: 14px;
 			padding: 4px;
 			border: 1px solid #e1e1e1;
+			--border: 1px solid teal;
 			margin-right: 5px;
 		}
 
-		.item-value2 {
+		.item-value {
 			background-color: #f2f2f2;
+			--background-color: teal;
+			--color: white;
+			--font-weight: bold;
 			color: teal;
 			font-size: 14px;
-			padding: 5px;
+			padding: 4px;
 			min-width: 30px;
 			border: 1px solid #e1e1e1;
+			--border: 1px solid teal;
+			margin-right: 5px;
 		}
 
 		.item-container {
 			margin-bottom: 5px;
+		}
+
+		.item-container.border {
+			border: 1px solid #e1e1e1;
+			padding:3px 5px 3px 5px;
+			--padding-right:5px;
 		}
 
 		#settings-container {
@@ -46,20 +61,14 @@
 			font-weight: 700;
 			margin-bottom: 5px;
 		}
-
 		
-
-		#item-value-6 {
-			display: none;
-			margin-right: 0px;
-		}
 	</style>
 
 	<template>
 		<div id='settings-container' class="layout vertical">
 			<div id="heading">Settings</div>
 			<template is='dom-repeat' items={{settings}}>
-				<div class="layout horizontal item-container center">
+				<div class$="layout horizontal item-container center [[computeBorder(item.diff)]]">
 					<div class="item-label">[[item.label]]:&nbsp</div>
 					
 					<template is='dom-if' if="[[hasValue(item.value)]]">
@@ -87,6 +96,12 @@
 
 			hasValue: function(val) {
 				return val !="";
+			},
+
+			computeBorder: function(diff) {
+				if(diff) {
+					return "border";
+				}
 			}
 		});
 	</script>
