--- a/src/components/editor/aq-editor-sidebar-log.html
+++ b/src/components/editor/aq-editor-sidebar-log.html
@@ -42,9 +42,11 @@
 		<paper-card id='logcontainer' class="layout vertical self-center">
 			<div class="card-content">
 				<template is='dom-repeat' items="{{logs}}">
-					<aq-log-item-new datetime = "[[item.datetime]]"
-								message = "[[item.message]]"
-								message-type = "[[item.messagetype]]">
+					<aq-log-item-new 
+							actual-datetime="[[item.dt]]"
+							datetime="[[item.datetime]]"
+							message="[[item.message]]"
+							message-type="[[item.messagetype]]">
 					</aq-log-item-new>
 				</template>
 			</div>
