--- a/src/components/common/backtest/aq-aggregatedreturns-barchart.html
+++ b/src/components/common/backtest/aq-aggregatedreturns-barchart.html
@@ -141,10 +141,10 @@
 				this.$$('#barChart').addSeries(name, data, options, redraw);
 			},
 
-			createMonthlyReturnBarChart: function(monthlyReturns) {
+			createMonthlyReturnBarChart: function(monthlyReturns, benchmark) {
 				var types = ["algorithm","benchmark"];
 				var colors = ["#0375b4", "#cc6666", "#FFAA1D","#007849","#6e2667","#fc4a1a"];
-				var legend = ["Strategy", "Benchmark"];
+				var legend = ["Strategy", benchmark];
 				
 				for (var index=0; index<types.length;index++) {
 
