--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -854,9 +854,9 @@
 
                     basicSettings.push({label:"Dates", value:dates, value2:""});*/
 
-                    var startDate =  new Date(allSettings["startDate"]).toLocaleDateString('en-IN');
+                    var startDate =  new Date(allSettings["startDate"]).toLocaleDateString('en-IN',{year: 'numeric', month: 'long', day: 'numeric' });
 
-                    var endDate = new Date(allSettings["endDate"]).toLocaleDateString('en-IN');
+                    var endDate = new Date(allSettings["endDate"]).toLocaleDateString('en-IN', {year: 'numeric', month: 'long', day: 'numeric' });
                     
                     basicSettings.push({label:"Start Date", value:"", value2:startDate});
 
@@ -865,7 +865,7 @@
                     basicSettings.push({label:"Benchmark", value:"", value2:allSettings.benchmark ? allSettings.benchmark=="" ? "NIFTY_50" : allSettings.benchmark : "NIFTY_50"});
 
                     basicSettings.push({label:"Universe", value:"", 
-                            value2:allSettings.universe ? allSettings.settings=="" ? "Nifty 50" : allSettings.universe : "Nifty 50"});
+                            value2:allSettings.universeIndex ? allSettings.universeIndex=="" ? "Nifty 50" : allSettings.universeIndex : "Nifty 50"});
 
                     if(advancedSettings.slippage) {
                         brokerageSettings.push({label:"Slippage", value:advancedSettings.slippage.value.toString()+'%', value2:advancedSettings.slippage.model});
