--- a/src/components/editor/aq-editor-sidebar-log.html
+++ b/src/components/editor/aq-editor-sidebar-log.html
@@ -21,14 +21,15 @@
 			background-color: #323232;
 			color: white;
 			overflow-y: scroll;
-			--margin: auto 0;	
+			--margin: auto 0;
+			padding: 5px;
 		}
 
 		paper-card { 
 			--paper-card: {
 				height: 97.5%;
-
 			}
+
 		}
 
 		.padding {
@@ -40,7 +41,7 @@
 	<template>
 		
 		<paper-card id='logcontainer' class="layout vertical self-center">
-			<div class="card-content">
+			<!--div class="card-content"-->
 				<template is='dom-repeat' items="{{logs}}">
 					<aq-log-item-new 
 							actual-datetime="[[item.dt]]"
@@ -49,7 +50,7 @@
 							message-type="[[item.messagetype]]">
 					</aq-log-item-new>
 				</template>
-			</div>
+			<!--/div-->
 		</paper-card>
 
 		<iron-signals on-iron-signal-bulk-data='onMessage' on-iron-signal-point-data='onMessage'></iron-signals>
